# freecad-macro-cut-for-magnets

./: .coderabbit.yaml  .codespell-ignore-words.txt  .gitleaks.toml  .markdownlint.yaml  .mise.toml  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  justfile  mkdocs.yaml  package.xml  pyproject.toml
.github/: FUNDING.yaml  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/actions/setup-freecad/: action.yaml
.github/workflows/: codeql.yaml  docs.yaml  macro-cut-magnets-release.yaml  macro-release-reusable.yaml  pre-commit.yaml  tests.yaml
docs/: changelog.md  contributing.md  index.md  installation.md  parameters.md  troubleshooting.md  usage.md
just/: dev.just  documentation.just  install.just  quality.just  release.just  testing.just
macro/Cut_Object_for_Magnets/: CutObjectForMagnets.FCMacro  README-CutObjectForMagnets.md  RELEASE_NOTES.md  __init__.py  cut_magnets_core.py  cut_magnets_fc.py  wiki-source.txt
tests/: __init__.py
tests/freecad/: __init__.py  test_cut_magnets.py
tests/just_commands/: __init__.py  conftest.py  test_dev.py  test_documentation.py  test_install.py  test_main.py  test_quality.py  test_release.py  test_testing.py
tests/unit/: test_core.py
