[project]
name = "freecad-macro-cut-for-magnets"
version = "0.6.2"
description = "A FreeCAD macro that cuts 3D objects along a plane and adds aligned magnet holes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Sean P. Kane", email = "spkane@gmail.com" }
]
keywords = ["freecad", "macro", "3d-printing", "magnets", "cad"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Visualization",
]

# No runtime dependencies - this is a FreeCAD macro

[project.optional-dependencies]
dev = [
    "ruff>=0.14.0",
    "bandit>=1.9.0",
    "codespell>=2.4.0",
    "detect-secrets>=1.5.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.6.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-glightbox>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/spkane/freecad-macro-cut-for-magnets"
Documentation = "https://spkane.github.io/freecad-macro-cut-for-magnets"
Repository = "https://github.com/spkane/freecad-macro-cut-for-magnets"
Issues = "https://github.com/spkane/freecad-macro-cut-for-magnets/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "macro/**/*.FCMacro",
    "macro/**/*.py",
    "macro/**/*.svg",
    "macro/**/*.md",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # assert_used - OK in macros

[tool.codespell]
skip = "*.lock,*.json,.secrets.baseline"
ignore-words = ".codespell-ignore-words.txt"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["macro/Cut_Object_for_Magnets"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
